automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,12 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "   travel_destinations[0]"
+    "   travel_destinations[0]\n",
+    "return tra"
    ]
   },
   {
