--- a/index.ipynb
+++ b/index.ipynb
@@ -194,8 +194,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "favorite_destination()\n",
-    "\n",
-    "travel_destinations[-1] # 'madagascar'"
+    "    \n",
+    "    return travel_destinations[-1] # 'madagascar'"
    ]
   },
   {
