automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,23 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-16-b17568b07d2d>, line 3)",
+     "evalue": "unexpected indent (<ipython-input-18-a0e01cda2c9b>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-b17568b07d2d>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    travel_destinations.append('madagascar')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-a0e01cda2c9b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    travel_destinations.append(\"madagascar\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "favorite_destination()\n",
-    "    travel_destinations.append(\"madagascar\"\n",
-    "                              )\n",
+    "    travel_destinations.append(\"madagascar\")\n",
     "    return travel_destinations[-1] # 'madagascar'"
    ]
   },
