--- a/index.ipynb
+++ b/index.ipynb
@@ -222,6 +222,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    range\n",
     "    for i "
    ]
   },
