automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    range\n",
+    "    range =list(0,len(travel))\n",
     "    for i "
    ]
   },
