--- a/index.ipynb
+++ b/index.ipynb
@@ -222,8 +222,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    range =list(0,len(travel))\n",
-    "    for i "
+    "    range =list(0,len(travel_destinations))\n",
+    "    for i in rang"
    ]
   },
   {
