automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    range =list(0,len(travel_destinations))\n",
-    "    for i in rang"
+    "    for i in range:\n",
+    "        travel_ds"
    ]
   },
   {
