--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
     "def capitalize_countries():\n",
     "    range =list(0,len(travel_destinations))\n",
     "    for i in range:\n",
-    "        travel_destinations[i].ca"
+    "        travel_destinations[i].title()"
    ]
   },
   {
