--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "    for i in range:\n",
     "        travel_destinations[i]=travel_destinations[i].title()\n",
     "        \n",
-    "        re"
+    "        return travel"
    ]
   },
   {
