--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    range =list(range(0,len(travel_destinations)))\n",
+    "    destination_n =list(range(0,len(travel_destinations)))\n",
     "    for i in range:\n",
     "        travel_destinations[i]=travel_destinations[i].title()\n",
     "        \n",
