automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,14 +216,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-35-c6d92c54a58f>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-c6d92c54a58f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    destination_number =list(range(0,len(travel_destinations)))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "    destination_number =list(range(0,len(travel_destinations)))\n",
+    "    destination_number\n",
+    "\n",
     "def capitalize_countries():\n",
     "    destination_number =list(range(0,len(travel_destinations)))\n",
-    "    \n",
+    "    destination_number\n",
     "    for i in destination_number:\n",
     "        travel_destinations[i]=travel_destinations[i].title()\n",
     "        \n",
