automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,8 +232,13 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "destination_number =list(range(0,len(travel_destinations)))\n",
-    "destination_number"
+    "def capitalize_countries():\n",
+    "    destination_number =list(range(0,len(travel_destinations)))\n",
+    "    destination_number\n",
+    "    for i in destination_number:\n",
+    "        travel_destinations[i]=travel_destinations[i].title()\n",
+    "        \n",
+    "        return travel_destinations"
    ]
   },
   {
