--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "favorite_destination()\n",
+    "def favorite_destination()\n",
     "    travel_destinations.append(\"madagascar\")\n",
     "    return travel_destinations[-1] # 'madagascar'"
    ]
