--- a/index.ipynb
+++ b/index.ipynb
@@ -188,15 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-39-a0e01cda2c9b>, line 3)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-40-bf9d136e0a91>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-a0e01cda2c9b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    travel_destinations.append(\"madagascar\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-bf9d136e0a91>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def favorite_destination()\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
