automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,6 +213,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    capitalized_countries[]\n",
     "    for i in destination_number:\n",
     "        travel_destinations[i]=travel_destinations[i].title()\n",
     "        \n",
