--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized_countries[]\n",
-    "    for countries in travel:\n",
+    "    for countries in travel_destinations:\n",
     "        travel_destinations[i]=travel_destinations[i].title()\n",
     "        \n",
     "        return travel_destinations"
