--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
     "def capitalize_countries():\n",
     "    capitalized_countries[]\n",
     "    for countries in travel_destinations:\n",
-    "        travel_destinations[i]=travel_destinations[i].title()\n",
+    "        capitalized_countr=travel_destinations[i].title()\n",
     "        \n",
     "        return travel_destinations"
    ]
