--- a/index.ipynb
+++ b/index.ipynb
@@ -214,8 +214,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized_countries[]\n",
-    "    for countries in travel_destinations:\n",
-    "        capitalized_countries.append(destinationtitle()\n",
+    "    for destination in travel_destinations:\n",
+    "        capitalized_countries.append(destination.title()\n",
     "        \n",
     "        return travel_destinations"
    ]
