automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,21 +216,21 @@
     "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
     "        capitalized_countries.append(destination.title())\n",
-    "        return travel_destinations"
+    "        return capitalized_countries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+       "['Argentina']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
